--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/enabler/enabler-logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/enabler-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enabler</title>
-    <script type="module" crossorigin src="/enabler/assets/index.81d6883c.js"></script>
-    <link rel="stylesheet" href="/enabler/assets/index.f8f6b29d.css">
+    <script type="module" crossorigin src="/assets/index.356599fc.js"></script>
+    <link rel="stylesheet" href="/assets/index.8a155082.css">
   </head>
   <body>
     <div id="root"></div>
